--- a/rportfolio/package.json
+++ b/rportfolio/package.json
@@ -9,6 +9,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@mediapipe/tasks-vision": "^0.10.8",
     "@mui/material": "^5.14.10",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-three/drei": "^9.88.13",
     "@react-three/fiber": "^8.15.10",
     "@testing-library/jest-dom": "^5.17.0",
@@ -17,6 +19,7 @@
     "@types/three": "^0.158.2",
     "framer-motion": "^10.16.4",
     "loader": "^2.1.1",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
